Provide option for MOH on conference while partipants==1. This close #1052